# term-dist

./: .gitignore  README.md  pyproject.toml
src/app/: main.py
